opam-version: "2.0"
synopsis: "OpenSSL binding to EIO"
version: "dev"
license: "LGPL with OpenSSL linking exception"
homepage: "https://github.com/anmonteiro/eio-ssl"
doc: "https://github.com/anmonteiro/eio-ssl/blob/master/src/eio_ssl.mli"
bug-reports: "https://github.com/anmonteiro/eio-ssl/issues"
authors: [
  "Antonio Monteiro <anmonteiro@gmail.com>"
]
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
dev-repo: "git+https://github.com/anmonteiro/eio-ssl.git"
depends: [
  "dune"
  "ocaml" {>= "5.0"}
  "ssl" {>= "0.5.12"}
  "eio"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
