opam-version: "1.2"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "http://erratique.ch/software/hmap"
doc: "http://erratique.ch/software/hmap/doc"
license: "ISC"
dev-repo: "http://erratique.ch/repos/hmap.git"
bug-reports: "http://github.com/dbuenzli/hmap/issues"
tags: ["data-structure" "org:erratique"]
available: [ ocaml-version >= "4.02.0"]
depends: [
  "dune" { >= "2.0.0" }
  "ocaml" { >= "4.02.0" }
]
depopts: [  ]
build:
[
  [ "dune" "build" "-p" name ]
]
