opam-version: "1.2"
name: "magic-mime"
version: "1.0.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/mirage/ocaml-magic-mime"
bug-reports: "https://github.com/mirage/ocaml-magic-mime/issues"
dev-repo: "https://github.com/mirage/ocaml-magic-mime.git"
license: "ISC"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta9"}
]
