opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: ["Thomas Gazagnaire" "Dave Scott"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-flow"
doc: "https://mirage.github.io/mirage-flow/"
bug-reports: "https://github.com/mirage/mirage-flow/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {build & >= "1.0"}
  "fmt"
  "lwt"
  "logs"
  "cstruct" {>= "2.0.0"}
  "mirage-clock" {>= "1.2.0"}
  "mirage-flow" {>= "1.2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-flow.git"
