opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: ["Thomas Gazagnaire" "Dave Scott"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-flow"
doc: "https://mirage.github.io/mirage-flow/"
bug-reports: "https://github.com/mirage/mirage-flow/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "jbuilder" {build & >= "1.0+beta7"}
  "fmt"
  "logs"
  "mirage-flow" {>= "1.2.0"}
  "mirage-flow-lwt" {>= "1.2.0"}
  "lwt"
  "cstruct" {>= "3.2.0"}
  "alcotest" {with-test}
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/mirage/mirage-flow.git"
