opam-version: "1.2"
maintainer:   [ "romain.calascibetta@gmail.com" ]
authors:      "Romain Calascibetta"
license:      "ISC"
homepage:     "https://github.com/dinosaure/optint"
bug-reports:  "https://github.com/dinosaure/optint/issues"
dev-repo:     "https://github.com/dinosaure/optint.git"
doc:          "https://dinosaure.github.io/optint/"

build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
]
available: [ocaml-version >= "4.03.0"]
