opam-version: "2.0"
maintainer:   [ "romain.calascibetta@gmail.com" ]
authors:      "Romain Calascibetta"
license:      "ISC"
homepage:     "https://github.com/dinosaure/optint"
bug-reports:  "https://github.com/dinosaure/optint/issues"
dev-repo:     "git+https://github.com/dinosaure/optint.git"
doc:          "https://dinosaure.github.io/optint/"
synopsis:     "Abstract type on integer between x64 and x86 architecture"
description: """
This library provide an abstract type which represents at least a 32-bits integer.
On x64, this library use a native unboxed integer (63 bits).
On x86, this library use a boxed int32.

Implementation depends on target architecture.
"""

build: ["dune" "build" "-p" name "-j" jobs]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "crowbar" {with-test}
  "fmt" {with-test}
]
