opam-version: "2.0"
maintainer:   [ "romain.calascibetta@gmail.com" ]
authors:      "Romain Calascibetta"
license:      "ISC"
homepage:     "https://github.com/mirage/optint"
bug-reports:  "https://github.com/mirage/optint/issues"
dev-repo:     "git+https://github.com/mirage/optint.git"
doc:          "https://mirage.github.io/optint/"
synopsis:     "Abstract type on integer between x64 and x86 architecture"
description: """
This library provide an abstract type which represents at least a 32-bits integer.
On x64, this library use a native unboxed integer (63 bits).
On x86, this library use a boxed int32.

Implementation depends on target architecture.
"""

build: ["dune" "build" "-p" name "-j" jobs]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "crowbar" {with-test & >= "0.2"}
  "monolith" {with-test}
  "fmt" {with-test}
]
