opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "ISC"
homepage: "https://github.com/hannesm/randomconv"
doc: "https://hannesm.github.io/randomconv/doc"
bug-reports: "https://github.com/hannesm/randomconv/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "dune"
  "cstruct" {>= "1.9.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/hannesm/randomconv.git"
synopsis: "Convert from random byte vectors (Cstruct.t) to random native numbers"
description: """
Given a function which produces random byte vectors, convert it to
a number of your choice (int8/int16/int32/int64/int/float).
"""
