opam-version: "1.2"
maintainer: "The stdlib-shims programmers"
authors: "The stdlib-shims programmers"
homepage: "http://ocaml.org"
doc: "https://ocaml.github.io/stdlib-shims/"
dev-repo: "https://github.com/ocaml/stdlib-shims.git"
bug-reports: "https://github.com/ocaml/stdlib-shims/issues"
tags: ["stdlib" "compatibility" "org:ocaml"]
license: ["typeof OCaml system"]
available: [ ocaml-version >= "4.02.3" ]
depends: ["dune"]
build: [ "dune" "build" "-p" name "-j" jobs ]
