opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: [
  "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
  "David Kaloper Meršinjak <david@numm.org>"
]
homepage: "https://erratique.ch/software/uucp"
doc: "https://erratique.ch/software/uucp/doc/Uucp"
dev-repo: "git+https://erratique.ch/repos/uucp.git"
bug-reports: "https://github.com/dbuenzli/uucp/issues"
tags: [ "unicode" "text" "character" "org:erratique" ]
license: "ISC"
depends: [
 "ocaml" {>= "4.01.0"}
 "dune" {>="1.3"}
 "uchar"
 ]
conflicts: [ "uutf" {< "1.0.1"}
             "cmdliner" {< "1.0.0"} ]
build: [
 [ "dune" "subst" ] {pinned}
 [ "dune" "build" "-p" name "-j" jobs]
]
