(library
 (name hdr_histogram)
 (public_name hdr_histogram)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags (:standard -w -9-27))
 (ctypes
  (external_library_name hdr_histogram)
  (build_flags_resolver pkg_config)
  (headers (include "hdr/hdr_histogram.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
