(executable
 (name main)
 (public_name eeww)
 (modules main letsencrypt_ext)
 (libraries cohttp-eio eio_main eio.unix eio uri fpath magic-mime letsencrypt fmt.tty logs.fmt logs.cli fmt.cli cmdliner mirage-crypto-rng-eio))

(executable
 (name fetch)
 (public_name eeww-fetch)
 (modules fetch bars)
 (libraries cohttp-eio eio_main eio.unix eio tls tls-eio mirage-crypto-rng-eio progress vector))


