(executable
 (name main)
 (public_name eeww)
 (modules main)
 (libraries cohttp-eio eio_main eio.unix eio uri fpath magic-mime tls_le fmt.tty logs.fmt logs.cli fmt.cli cmdliner mirage-crypto-rng-eio h2 gluten-eio httpaf-eio h2-eio))

(executable
 (name iperf_serve)
 (public_name eeww-iperf-server)
 (modules iperf_serve)
 (libraries iperf eio_main eio))
