(executable
 (name generate_kqueue_constants)
 (modules generate_kqueue_constants)
 (libraries kqueue_constants))

(executable
 (name generate_kqueue_stubs_c)
 (modules generate_kqueue_stubs_c)
 (libraries kqueue_stubs))

(executable
 (name generate_kqueue_stubs_ml)
 (modules generate_kqueue_stubs_ml)
 (libraries kqueue_stubs))
