(lang dune 3.3)
(name domain-local-await)
(generate_opam_files true)
(source (github ocaml-multicore/domain-local-await))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/domain-local-await")
(license "0BSD")
(package (name domain-local-await)
 (synopsis "A scheduler independent blocking mechanism")
 (depends
  (ocaml (>= 5.0))
  (mdx (and (>= 1.10.0) :with-test))))
(using mdx 0.2)
