opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "https://github.com/dune-universe/hmap"
license: "ISC"
dev-repo: "git+https://github.com/dune-universe/hmap.git"
bug-reports: "http://github.com/dbuenzli/hmap/issues"
tags: ["data-structure" "org:erratique"]
depends: [
  "dune" { >= "2.0.0" }
  "ocaml" { >= "4.02.0" }
]
depopts: [  ]
build:
[
  [ "dune" "build" "-p" name ]
]
synopsis: "Hmap provides heterogeneous value maps for OCaml"
